# napari-gruvbox

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_gruvbox/: __init__.py  napari.yaml
