[metadata]
name = napari-gruvbox

description = Gruvbox theme for napari.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brisvag/napari-gruvbox
author = Lorenzo Gaifas
author_email = brisvag@gmail.com
license = GPL-3.0-only
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/brisvag/napari-gruvbox/issues
    Documentation = https://github.com/brisvag/napari-gruvbox#README.md
    Source Code = https://github.com/brisvag/napari-gruvbox
    User Support = https://github.com/brisvag/napari-gruvbox/issues

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-gruvbox = napari_gruvbox:napari.yaml

[options.package_data]
* = *.yaml
